tests/ui/control-checkpoint-payload.stderr
error[E0080]: evaluation panicked: control labels require capability payloads
 --> src/global/steps.rs
  |
  |         let head = const_dsl::const_send_typed::<From, To, Msg, LANE>();
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::g::advanced::steps::StepCons<hibana::g::advanced::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::Message<hibana::global::LabelMarker<61>, ()>>, hibana::g::advanced::steps::StepNil> as hibana::global::steps::BuildEffList>::EFF` failed inside this call
  |
note: inside `hibana::global::const_dsl::const_send_typed::<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<61>, ()>, 0>`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/global/const_dsl.rs
  |
  |         panic!("control labels require capability payloads");
  |         ---------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |         Self::wrap(Steps::EFF)
  |                    ^^^^^^^^^^

note: erroneous constant encountered
  --> tests/ui/control-checkpoint-payload.rs:12:13
   |
12 |     let _ = BAD;
   |             ^^^
